# testpkg

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/testpkg/: __init__.py  main.py
tests/: test_main.py
